--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1><strong>I am Raefik Hakim</strong><br />
+					Senior IT Specialist & Technical Sales Expert<br />
+				
 				</div>
 			</header>
 
@@ -29,10 +29,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Raefik Hakim <br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Work With Me<br />
+							Driving Business Growth Through Innovative Network & Telecommunication Solution.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I'm Raefik Hakim, a senior IT Specialist with 9 Years of experience. I specialize in netowrk Telecommunication, PBX/VoIP System, and technical sales. My mission is to deliver optimized IT solution that increase efficiency,reduce cost and boost user satisfaction</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
