--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/rafik.jpg" alt="" /></a>
 					<h1><strong>I am Raefik Hakim</strong><br />
 					Senior IT Specialist & Technical Sales Expert<br />
 				
