--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 				</div>
 			</header>
 
+			 <!-- Google tag (gtag.js) -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-404PMS4V5S"></script>
+			<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+				gtag('js', new Date());
+
+			gtag('config', 'G-404PMS4V5S');
+			</script>
+
 		<!-- Main -->
 			<div id="main">
 
